crates/solidity/testing/snapshots/bindings_output/using/global_multi_file/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[main.sol:7:1]
    │
  7 │ ╭─▶ using Lib for uint;
    ┆ ┆   
 20 │ ├─▶ 
    │ │      
    │ ╰────── Error occurred here.
────╯
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[other.sol:1:1]
   │
 1 │ ╭─▶ function foo(uint a) pure returns (uint) {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (4):
- Def: #1 ["foo" @ main.sol:1:9] (imported symbol)
- Def: #2 ["Lib" @ main.sol:3:9] (library)
- Def: #3 ["nop" @ main.sol:4:14] (function, type: function (uint256) returns void)
- Def: #4 ["x" @ main.sol:4:23] (parameter, type: uint256)

------------------------------------------------------------------------

References (1):
- Ref: ["foo" @ main.sol:1:9] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[main.sol:1:1]
   │
 1 │ import {foo} from "other.sol";
   │         ─┬─  
   │          ╰─── name: 1
   │          │   
   │          ╰─── unresolved
   │ 
 3 │ library Lib {
   │         ─┬─  
   │          ╰─── name: 2
 4 │     function nop(uint x) public {}
   │              ─┬─      ┬  
   │               ╰────────── name: 3
   │                       │  
   │                       ╰── name: 4
───╯

------------------------------------------------------------------------

Bindings: 
